[metadata]
name = sparg
version = 1.0.1
author = Matthew Osmond
author_email = mm.osmond@utoronto.ca
description = A package to estimate dispersal rates and locate genetic ancestors from tree sequences
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mmosmond/sparg
project_urls =
    Bug Tracker = https://github.com/mmosmond/sparg/issues
    Tutorial = https://github.com/mmosmond/sparg/tutorial/tutorial.ipynb
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >= 3.7
install_requires = 
    numpy
    scipy
    dendropy
    tskit
    tqdm

[options.packages.find]
where = src
